# rhasspy-speech

./: .dockerignore  .gitignore  .projectile  Dockerfile  README.md  requirements.txt  requirements_dev.txt  setup.py
kaldi/: .gitignore
kaldi/cmake/: VersionHelper.cmake
kaldi/src/base/: CMakeLists.txt
kaldi/src/chain/: CMakeLists.txt
kaldi/src/chainbin/: CMakeLists.txt
kaldi/src/cudadecoder/: CMakeLists.txt
kaldi/src/cudadecoderbin/: CMakeLists.txt
kaldi/src/cudafeat/: CMakeLists.txt
kaldi/src/cudafeatbin/: CMakeLists.txt
kaldi/src/doc/: CMakeLists.txt
kaldi/src/featbin/: CMakeLists.txt
kaldi/tools/: Makefile
opengrm/: .bazelrc  CONTRIBUTING  Makefile.in  NEWS  README.md  configure  configure.ac
opengrm/src/: Makefile.in
phonetisaurus/: .gitignore  CMakeLists.txt  Makefile  phonetisaurus.cc
rhasspy_speech/: __init__.py  __main__.py  coqui_stt.py  g2p.py  hassil_fst.py  intent_fst.py  kaldi.py  sentences.py  tools.py  train.py  transcribe_stream.py  transcribe_util.py  transcribe_wav.py
script/: build_coqui_stt.sh  build_docker.sh  build_kaldi.sh  build_openfst.sh  build_opengrm.sh  build_phonetisaurus.sh  export_voice2json_profile.py  format  lint  run
tests/: resample.py  test_cs_CS-rhasspy.py  test_de_DE-zamia.py  test_en.py  test_en.yaml  test_en_US-zamia.py  test_es_ES-rhasspy.py  test_fr_FR-guyot.py  test_fr_FR-rhasspy.py  test_g2p.py  test_hassil_fst.py  test_it_IT-rhasspy.py  test_nl_NL-cgn.py  test_ru_RU-rhasspy.py  test_sentences.py
tests/fr_FR-rhasspy/: estce_que_la_porte_de_garage_est_ouverte_ou_fermée.txt
(+85 files in other folders)
